# aws-rdsportal-backend

./: .dockerignore  .gitignore  pyproject.toml
app/: main.py
app/api/v1/: projects.py  router.py
app/core/: aws_clients.py  aws_params.py  cognito.py  config.py  database.py  logging.py
app/models/: project.py
app/repositories/: __init__.py  base.py
app/schemas/: project.py
app/services/: project_service.py
aws-rdsportal-backend/: .dockerignore  .gitignore  pyproject.toml
aws-rdsportal-backend/app/: main.py
aws-rdsportal-backend/app/api/v1/: projects.py  router.py
aws-rdsportal-backend/app/core/: aws_params.py  cognito.py  config.py  database.py  logging.py
aws-rdsportal-backend/app/models/: project.py
aws-rdsportal-backend/app/repositories/: __init__.py
aws-rdsportal-backend/app/schemas/: project.py
aws-rdsportal-backend/app/services/: project_service.py
