[project]
name = "aws-rdsportal-backend"
version = "1.0.0"
description = "AWS Cognito User Authentication Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "boto3>=1.34.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx[http2]>=0.26.0",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "structlog>=24.1.0",
    "aioboto3>=13.0.0",
    "pybreaker>=1.0.0",
    "tenacity>=8.2.0",
    "qcloudsms_py>=0.1.4",
    "slowapi>=0.1.9",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "boto3-stubs~=1.40.61",
    "path>=17.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "moto[cognitoidp]>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

